force-app/main/default/objects/LoggerPlugin__mdt/fields/PluginApiName__c.field-meta.xml
<CustomField>
    <fullName>PluginApiName__c</fullName>
    <description>The API name of the metadata to run, based on the Plugin Type

Apex: The name of an Apex class that implements the interface LoggerSObjectHandlerPlugin

Flow: The API name of a Flow that supports these inputs:
 - triggerOperationType: text variable
 - triggerNew: record collection variable
 - triggerOld: record collection variable</description>
    <inlineHelpText>The API name of the metadata to run, based on the Plugin Type

Apex: The name of an Apex class that implements the interface LoggerSObjectHandlerPlugin

Flow: The API name of a Flow that supports these inputs:
 - triggerOperationType: text variable
 - triggerNew: record collection variable
 - triggerOld: record collection variable</inlineHelpText>
    <label>Plugin API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>