force-app/main/default/objects/LoggerPlugin__mdt/fields/PluginType__c.field-meta.xml
<CustomField>
    <fullName>PluginType__c</fullName>
    <description>The type of plugin that the logging system should dynamically execute - Apex or Flow.</description>
    <inlineHelpText>The type of plugin that the logging system should dynamically execute - Apex or Flow.</inlineHelpText>
    <label>Plugin Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
                <default>true</default>
                <label>Apex</label>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>