force-app/main/default/objects/LoggerPlugin__mdt/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <inlineHelpText>The logging system&apos;s SObject that should dynamically call the plugin. This controls when the plugin is executed.</inlineHelpText>
    <label>Logger SObject Type</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Logger Plugins</relationshipLabel>
    <relationshipName>LoggerSObjectHandlerPlugins</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>