force-app/main/default/objects/LoggerPlugin__mdt/validationRules/Plugins_are_not_supported.validationRule-meta.xml
<ValidationRule>
    <fullName>Plugins_are_not_supported</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    SObjectType__r.DeveloperName != &apos;LogEntryEvent&apos;,
    SObjectType__r.DeveloperName != &apos;Log&apos;,
    SObjectType__r.DeveloperName != &apos;LogEntry&apos;,
    SObjectType__r.DeveloperName != &apos;LogEntryTag&apos;,
    SObjectType__r.DeveloperName != &apos;LoggerTag&apos;
)</errorConditionFormula>
    <errorDisplayField>SObjectType__c</errorDisplayField>
    <errorMessage>Plugins are not supported for this SObject Handler</errorMessage>
</ValidationRule>