force-app/main/default/objects/LoggerPlugin__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>IsEnabled__c</columns>
    <columns>ExecutionOrder__c</columns>
    <columns>SObjectType__c</columns>
    <columns>PluginType__c</columns>
    <columns>PluginApiName__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>